--- a/public/FrontEnd/partials/imageupload.html
+++ b/public/FrontEnd/partials/imageupload.html
@@ -1,3 +1,57 @@
 <!--Image Upload -->
-{{message}}
+<div class="imageupload">
+  <div class="imageuploadform">
+    <div class="container-fluid">
+      <div class="row">
+        <form id="uploadForm2" enctype="multipart/form-data" action="/api/photo" method="post">
 
+             <div class="col-sm-6">
+               <p> <input type="file" name="userPhoto" multiple /> </p>
+             </div>
+             <div class="col-sm-6">
+               <p> <input type="submit" value="Upload Image" name="submit"></p>
+             </div>
+          <span id = "status"></span>
+        </form>
+      </div>
+     </div>
+  </div>
+  <!--finish of uploading forms-->
+
+  <!--Start of Drag and drop form -->
+  <div id="dragdrop">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-12">
+          <form id="uploadForm" enctype="multipart/form-data" action="/photos" method="post" class="dropzone">
+            <input type="file" name="userphoto" id="userphotoid"> Click here </input> <input type="submit" value="Upload Image" name="submit">
+            Drag and drop images here.
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--Drag and drop images to images -->
+  <div id="draganddroponmap">
+    <div class="containerfluid">
+      <div class="row">
+        <div class="col-lg-12">
+          <form id="mapdragdrop">
+
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!--Start of Google Maps -->
+  <div id="googlemapcontainer">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-12">
+          <div id="googleMap"style="height:380px;"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
