--- a/public/FrontEnd/partials/map.html
+++ b/public/FrontEnd/partials/map.html
@@ -3,10 +3,9 @@
   <div class="row">
   <div class="col-lg-4" id="imagethumb">
     <!-- Display uploaded images here as thumbnails -->
-     <ul class="imagethumb"></ul>
+     <ul class="lists" id="thumbnail"></ul>
    </div>
-
-
+  
   <!--Start of Google Maps -->
     <div id="googlemapcontainer">
       <div class="col-lg-8">
@@ -15,3 +14,4 @@
     </div>
   </div>
 </div>
+
