--- a/public/FrontEnd/partials/imageupload.html
+++ b/public/FrontEnd/partials/imageupload.html
@@ -1,4 +1,13 @@
 <!--Image Upload -->
+<nav  class="navbar navbar-default navbar-top" id="mapnavigation">
+  <div class="container-fluid">
+    <ul class="nav navbar-nav navbar-left" id="maplinks">
+      <li><a href="#UploadImages">Upload Images</a></li>
+      <li><a href="#ViewImages">View Uploaded Images</a></li>
+    </ul>
+  </div>
+</nav>
+
 <div class="imageupload">
   <div class="imageuploadform">
     <div class="container-fluid">
@@ -31,20 +40,9 @@
       </div>
     </div>
   </div>
-  <!--Drag and drop images to images -->
-  <div id="draganddroponmap">
-    <div class="containerfluid">
-      <div class="row">
-        <div class="col-lg-12">
-          <form id="mapdragdrop">
 
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
 
-  <!--Start of Google Maps -->
+  <!--Start of Google Maps
   <div id="googlemapcontainer">
     <div class="container-fluid">
       <div class="row">
@@ -53,5 +51,5 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 </div>
