--- a/public/FrontEnd/css/main.css
+++ b/public/FrontEnd/css/main.css
@@ -192,3 +192,10 @@ html, body {
   width: 100%;
 }
 
+#menu-toggle{
+  size: 50px 55px;
+  padding: 10px;
+  background-image: url("/FrontEnd/Pictures/menu.png");
+  background-size: contain;
+
+}
