--- a/public/FrontEnd/partials/map.html
+++ b/public/FrontEnd/partials/map.html
@@ -44,5 +44,20 @@
     </div>
   </div>
 
+<div class="container-fluid">
+  <table class="table-responsive">
+    <table class="table">
+      <tbody>
+      <tr>
+        <td><button type="button" class="btn btn-primary" onclick="airplanehandler()">Airplane</button></td>
+        <td><button type="button" class="btn btn-primary">Bus</button></td>
+        <td><button type="button" class="btn btn-primary">Train</button></td>
+      </tr>
+      </tbody>
+    </table>
+  </table>
+</div>
+
+
 
 
