--- a/public/FrontEnd/partials/home.html
+++ b/public/FrontEnd/partials/home.html
@@ -1,4 +1,12 @@
 <!--The Home page -->
-
-{{message}}
-
+<div class="container-fluid">
+  {{message}}
+  <div class="row">
+    <div class="col-md-12">
+     <div class="header">
+      <h1><span id="header">TripAround</span></h1>
+     </div>
+    <button class="button" id="nextpagebutton"><span> > </span></button>
+    </div>
+  </div>
+</div>
