--- a/public/FrontEnd/partials/imageupload.html
+++ b/public/FrontEnd/partials/imageupload.html
@@ -9,6 +9,7 @@
 </nav>
 
 <div class="imageupload">
+  <div class="container-fluid">
   <div class="imageuploadform">
     <div class="container-fluid">
       <div class="row">
@@ -40,8 +41,8 @@
       </div>
     </div>
   </div>
-
-
+  <button class="button" id="nextpagebutton"><span> > </span></button>
+  <button class="button" id="beforepagebutton"><span> < </span></button>
   <!--Start of Google Maps
   <div id="googlemapcontainer">
     <div class="container-fluid">
@@ -52,4 +53,5 @@
       </div>
     </div>
   </div> -->
+  </div>
 </div>
