--- a/public/FrontEnd/partials/map.html
+++ b/public/FrontEnd/partials/map.html
@@ -56,7 +56,10 @@
       </tbody>
     </table>
   </table>
+  <button id="beforepagebutton" class="button"><span> < </span></button>
 </div>
+
+
 
 
 
