--- a/public/FrontEnd/partials/imageupload.html
+++ b/public/FrontEnd/partials/imageupload.html
@@ -13,13 +13,13 @@
   <div class="imageuploadform">
     <div class="container-fluid">
       <div class="row">
-        <form id="uploadForm2" enctype="multipart/form-data" action="/api/photo" method="post">
+        <form id="uploadForm2" enctype="multipart/form-data">
 
              <div class="col-sm-6">
-               <p> <input type="file" name="userPhoto" multiple /> </p>
+               <p> <input type="file" name="userPhoto" multiple id="userphoto" /> </p>
              </div>
              <div class="col-sm-6">
-               <p> <input type="submit" value="Upload Image" name="submit"></p>
+               <p> <input type="submit" value="Upload Image" name="submit" id="submitbutton"></p>
              </div>
           <span id = "status"></span>
         </form>
@@ -43,7 +43,7 @@
   </div>
   <button class="button" id="nextpagebutton"><span> > </span></button>
   <button class="button" id="beforepagebutton"><span> < </span></button>
-  <!--Start of Google Maps
+  <!--Start of Google Maps -->
   <div id="googlemapcontainer">
     <div class="container-fluid">
       <div class="row">
@@ -52,6 +52,6 @@
         </div>
       </div>
     </div>
-  </div> -->
+  </div>
   </div>
 </div>
