--- a/public/FrontEnd/partials/imageupload.html
+++ b/public/FrontEnd/partials/imageupload.html
@@ -13,8 +13,8 @@
   <div class="imageuploadform">
     <div class="container-fluid">
       <div class="row">
-        <form id="uploadForm2" enctype="multipart/form-data">
-
+        <form id="uploadForm2">
+             <div id="uploadstatus"></div>
              <div class="col-sm-6">
                <p> <input type="file" name="userPhoto" multiple id="userphoto" /> </p>
              </div>
@@ -49,6 +49,9 @@
       <div class="row">
         <div class="col-lg-12">
           <div id="googleMap"style="height:380px;"></div>
+          <form id="mapform">
+            <input type="submit" value="Save Map" id="savemap">
+          </form>
         </div>
       </div>
     </div>
