Image upload fix -- Formidable

--- a/public/FrontEnd/partials/imageupload.html
+++ b/public/FrontEnd/partials/imageupload.html
@@ -13,7 +13,7 @@
   <div class="imageuploadform">
     <div class="container-fluid">
       <div class="row">
-        <form id="uploadForm2">
+        <form id="uploadForm2" enctype="multipart/form-data">
              <div id="uploadstatus"></div>
              <div class="col-sm-6">
                <p> <input type="file" name="userPhoto" multiple id="userphoto" /> </p>
