--- a/public/FrontEnd/partials/map.html
+++ b/public/FrontEnd/partials/map.html
@@ -5,6 +5,7 @@
       <ul class="nav navbar-nav navbar-left" id="maplinks">
         <li><a href="#UploadImages">Upload Images</a></li>
         <li><a href="#ViewImages">View Uploaded Images</a></li>
+        <li><a href="#imagegallery">Browse Image gallery</a></li>
       </ul>
     </div>
   </nav>
