--- a/public/FrontEnd/partials/imagegallery.html
+++ b/public/FrontEnd/partials/imagegallery.html
@@ -17,12 +17,15 @@ Uses pluginmagnific
     <div class="col-lg-12">
       <ul id="imagegall">
 
-        <a class="popup" href="uploads/sea.jpg" id="image">
+        <a class="popup"id="image">
 
         </a>
         </ul>
     </div>
   </div>
 </div>
+
+<button class="button" id="nextpagebutton"><span> > </span></button>
+<button class="button" id="beforepagebutton"><span> < </span></button>
 
 
