Account Creation Automatic Polyline

--- a/public/FrontEnd/partials/map.html
+++ b/public/FrontEnd/partials/map.html
@@ -1,6 +1,6 @@
 <!-- Description : User can drag drop images to images -->
 
-  <nav  class="navbar navbar-default navbar-top" id="mapnavigation">
+  <nav  class="navbar navbar-default navbar-fixed-top" id="mapnavigation">
     <div class="container-fluid">
       <ul class="nav navbar-nav navbar-left" id="maplinks">
         <li><a href="#UploadImages">Upload Images</a></li>
@@ -9,6 +9,7 @@
       </ul>
     </div>
   </nav>
+  Welcome {{username}}
   <div id="manualtag" class="container-fluid">
     <div class="row">
      <div class="col-lg-4" id="imagethumb">
