--- a/public/FrontEnd/css/main.css
+++ b/public/FrontEnd/css/main.css
@@ -181,6 +181,8 @@ html, body {
 }
 
 #maplinks li a{
+  padding-left: 65px;
+  padding-top: 15px;
   text-decoration: none;
   color: #f0f0f0;
 
@@ -200,6 +202,8 @@ html, body {
 #menu-toggle{
   size: 50px 55px;
   padding: 10px;
+  position: fixed;
+  z-index: 10000;
   background-image: url("/FrontEnd/Pictures/menu.png");
   background-size: contain;
 }
@@ -322,4 +326,9 @@ html, body {
 #savemap{
   position: relative;
   padding: 30px;
+}
+
+.label{
+  position: relative;
+  padding:30px;
 }
