--- a/public/FrontEnd/partials/imageupload.html
+++ b/public/FrontEnd/partials/imageupload.html
@@ -1,13 +1,16 @@
 <!--Image Upload -->
-<nav  class="navbar navbar-default navbar-top" id="mapnavigation">
+<nav  class="navbar navbar-default navbar-fixed-top" id="mapnavigation">
   <div class="container-fluid">
     <ul class="nav navbar-nav navbar-left" id="maplinks">
+      <li></li>
       <li><a href="#UploadImages">Upload Images</a></li>
       <li><a href="#ViewImages">View Uploaded Images</a></li>
       <li><a href="#imagegallery">Browse Image gallery</a></li>
     </ul>
   </div>
 </nav>
+
+<h4> Welcome {{username}}</h4>
 
 <div class="imageupload">
   <div class="container-fluid">
@@ -22,6 +25,9 @@
              <div class="col-sm-6">
                <p> <input type="submit" value="Upload Image" name="submit" id="submitbutton"></p>
              </div>
+             <div id="dropzonePreview" class="dropzone">
+               <div class="dz-default dz-message"> <small class="text-muted">Drag Drop Pictures here </small></div>
+             </div>
           <span id = "status"></span>
         </form>
       </div>
@@ -29,7 +35,9 @@
   </div>
   <!--finish of uploading forms-->
 
+
   <!--Start of Drag and drop form -->
+  <!--
   <div id="dragdrop">
     <div class="container-fluid">
       <div class="row">
@@ -41,9 +49,10 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <button class="button" id="nextpagebutton"><span> > </span></button>
   <button class="button" id="beforepagebutton"><span> < </span></button>
+
   <!--Start of Google Maps -->
   <div id="googlemapcontainer">
     <div class="container-fluid">
