Image gallery carousel

--- a/public/FrontEnd/partials/imagegallery.html
+++ b/public/FrontEnd/partials/imagegallery.html
@@ -13,17 +13,22 @@ Uses pluginmagnific
 </nav>
 
 <div class="container fluid" id="gallerycontainer">
+
   <div class="row">
     <div class="col-lg-12">
       <ul id="imagegall">
-
         <a class="popup"id="image">
-
         </a>
         </ul>
     </div>
   </div>
+
+  <div class="blueberry">
+    <ul class="slides" id="slides"></ul>
+    <ul class="pager"></ul>
+  </div>
 </div>
+
 
 <button class="button" id="nextpagebutton"><span> > </span></button>
 <button class="button" id="beforepagebutton"><span> < </span></button>
