User folders created.

--- a/public/FrontEnd/partials/imageupload.html
+++ b/public/FrontEnd/partials/imageupload.html
@@ -11,6 +11,8 @@
 </nav>
 
 <h4> Welcome {{username}}</h4>
+<br>
+<h5> You are uploading images to : {{map}}</h5>
 
 <div class="imageupload">
   <div class="container-fluid">
