User support added
Broken: View Maps section

--- a/public/FrontEnd/partials/imagegallery.html
+++ b/public/FrontEnd/partials/imagegallery.html
@@ -11,6 +11,10 @@ Uses pluginmagnific
     </ul>
   </div>
 </nav>
+<br>
+Welcome {{username}}
+<br>
+You are viewing images of  {{map}}
 
 <div class="container fluid" id="gallerycontainer">
 
@@ -22,7 +26,6 @@ Uses pluginmagnific
         </ul>
     </div>
   </div>
-
   <div class="blueberry">
     <ul class="slides" id="slides"></ul>
     <ul class="pager"></ul>
