--- a/public/FrontEnd/partials/map.html
+++ b/public/FrontEnd/partials/map.html
@@ -10,6 +10,9 @@
     </div>
   </nav>
   Welcome {{username}}
+  <br>
+  You are viewing {{mapname}}
+  <br>
   <div id="manualtag" class="container-fluid">
     <div class="row">
      <div class="col-lg-4" id="imagethumb">
