--- a/public/FrontEnd/partials/dashboard.html
+++ b/public/FrontEnd/partials/dashboard.html
@@ -14,6 +14,9 @@
 <br>
 Welcome {{userid}}
 
+<br>
+<div id="info"></div>
+<br>
 <!--Display user's last created Maps -->
 <div class="container-fluid" id="menudashboard">
   <div class="row">
