--- a/public/FrontEnd/partials/imagegallery.html
+++ b/public/FrontEnd/partials/imagegallery.html
@@ -8,6 +8,7 @@ Uses pluginmagnific
       <li><a href="#UploadImages">Upload Images</a></li>
       <li><a href="#ViewImages">View Uploaded Images</a></li>
       <li><a href="#imagegallery">Browse Image Gallery</a></li>
+      <li><a href="#dashboard">Dashboard</a></li>
     </ul>
   </div>
 </nav>
