--- a/public/FrontEnd/partials/map.html
+++ b/public/FrontEnd/partials/map.html
@@ -6,6 +6,7 @@
         <li><a href="#UploadImages">Upload Images</a></li>
         <li><a href="#ViewImages">View Uploaded Images</a></li>
         <li><a href="#imagegallery">Browse Image gallery</a></li>
+        <li><a href="#dashboard">Dashboard</a></li>
       </ul>
     </div>
   </nav>
