--- a/public/FrontEnd/partials/imageupload.html
+++ b/public/FrontEnd/partials/imageupload.html
@@ -6,6 +6,7 @@
       <li><a href="#UploadImages">Upload Images</a></li>
       <li><a href="#ViewImages">View Uploaded Images</a></li>
       <li><a href="#imagegallery">Browse Image gallery</a></li>
+      <li><a href="#dashboard">Dashboard</a></li>
     </ul>
   </div>
 </nav>
@@ -24,9 +25,10 @@
              <div class="col-sm-6">
                <p> <input type="file" name="userPhoto" multiple id="userphoto" /> </p>
              </div>
+          <!--
              <div class="col-sm-6">
                <p> <input type="submit" value="Upload Image" name="submit" id="submitbutton"></p>
-             </div>
+             </div> -->
              <div id="dropzonePreview" class="dropzone">
                <div class="dz-default dz-message"> <small class="text-muted">Drag Drop Pictures here </small></div>
              </div>
