Search places. Place Marker Route according to vehicles.

--- a/public/FrontEnd/css/main.css
+++ b/public/FrontEnd/css/main.css
@@ -134,7 +134,6 @@ html, body {
   position: relative;
   width: 100%;
   padding: 20px;
-  height:1000px;
 }
 
 .lists{
@@ -326,7 +325,8 @@ html, body {
 
 #savemap{
   position: relative;
-  padding: 30px;
+  padding: 10px;
+
 }
 
 .label{
@@ -366,3 +366,36 @@ html, body {
   top:300px;
 
 }
+
+#dashboard{
+  position: fixed;
+  padding-top: 50px;
+  border-left:15px;
+}
+
+
+#imagegall
+{
+  position: fixed;
+  padding-top:50px ;
+  top:90px;
+  left:20px;
+}
+
+#mapinfo{
+  position: relative;
+  top:5px;
+  left:20px;
+}
+
+#cancel
+{
+  position: relative;
+  padding-right: 15px;
+}
+
+#optionsfooter{
+  position: relative;
+  height: 10px;
+}
+
