--- a/public/FrontEnd/partials/dashboard.html
+++ b/public/FrontEnd/partials/dashboard.html
@@ -12,8 +12,7 @@
 </nav>
 
 <br>
-Welcome {{userid}}
-
+<h3 id="dashboard">Welcome {{userid}} </h3>
 <br>
 <div id="info"></div>
 <br>
@@ -28,9 +27,7 @@ Welcome {{userid}}
       <!--View Saved Maps -->
       <a class="button" href="" id="viewbutt" ><i class="fa fa-map fa-3x"></i> Click here to View Saved Maps </a>
     </div>
-
   </div>
-
 </div>
 <!-- User can create a new map -->
 
