--- a/public/FrontEnd/partials/imageupload.html
+++ b/public/FrontEnd/partials/imageupload.html
@@ -10,8 +10,9 @@
     </ul>
   </div>
 </nav>
-
-<h4> Welcome {{username}}</h4>
+<br>
+<h3 id="dashboard">Welcome {{userid}} </h3>
+<br>
 <br>
 <h5> You are uploading images to : {{map}}</h5>
 
