--- a/public/FrontEnd/partials/map.html
+++ b/public/FrontEnd/partials/map.html
@@ -10,9 +10,12 @@
       </ul>
     </div>
   </nav>
-  Welcome {{username}}
+<br>
+<h3 id="dashboard">Welcome {{userid}} </h3>
+<br>
   <br>
-  You are viewing {{mapname}}
+  You are viewing : {{mapname}}
+  <br>
   <br>
   <div id="manualtag" class="container-fluid">
     <div class="row">
@@ -30,8 +33,9 @@
     </div>
   </div>
 
+  <input id="searchbox" class="controls" type="text" placeholder="Search Box">
 
-  <!--Modal Window -->
+<!--Modal Window -->
     <div class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog">
       <!-- Modal content-->
@@ -65,7 +69,27 @@
   <button id="beforepagebutton" class="button"><span> < </span></button>
 </div>
 
+<!-- Options Modal -->
+<div id="optionsmodal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
 
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Select Option</h4>
+      </div>
+      <div class="modal-body">
+        <button class="btn btn-primary" id="airplane">Airplane</button>
+        <button class="btn btn-primary" id="bus">Bus</button>
+      </div>
+      <div class="modal-footer" id="optionsfooter">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
+</div>
 
 
 
