--- a/public/FrontEnd/partials/imagegallery.html
+++ b/public/FrontEnd/partials/imagegallery.html
@@ -22,10 +22,10 @@ Uses pluginmagnific
 <div class="container fluid" id="gallerycontainer">
   <div class="row">
     <div class="col-lg-12">
+     <div id="slick">
       <ul id="imagegall">
-        <a class="popup"id="image">
-        </a>
-        </ul>
+      </ul>
+    </div>
     </div>
   </div>
   <div class="blueberry">
