--- a/public/FrontEnd/partials/imageupload.html
+++ b/public/FrontEnd/partials/imageupload.html
@@ -14,7 +14,7 @@
 <h3 id="dashboard">Welcome {{userid}} </h3>
 <br>
 <br>
-<h5> You are uploading images to : {{map}}</h5>
+<h5><div id="maptext"> You are uploading images to : {{map}}</div></h5>
 
 <div class="imageupload">
   <div class="container-fluid">
