login/register look + new css

--- a/public/FrontEnd/partials/dashboard.html
+++ b/public/FrontEnd/partials/dashboard.html
@@ -6,7 +6,7 @@
       <li></li>
       <li><a href="#UploadImages">Upload Images</a></li>
       <li><a href="#ViewImages">View Uploaded Images</a></li>
-      <li><a href="#imagegallery">Browse Image gallery</a></li>
+      <li><a href="#imagegallery">Browse Image Gallery</a></li>
     </ul>
   </div>
 </nav>
