--- a/public/FrontEnd/partials/imagegallery.html
+++ b/public/FrontEnd/partials/imagegallery.html
@@ -7,7 +7,7 @@ Uses pluginmagnific
     <ul class="nav navbar-nav navbar-left" id="maplinks">
       <li><a href="#UploadImages">Upload Images</a></li>
       <li><a href="#ViewImages">View Uploaded Images</a></li>
-      <li><a href="#imagegallery">Browse Image Gallery</a></li>
+      <li class="active"><a href="#imagegallery">Browse Image Gallery</a></li>
       <li><a href="#dashboard">Dashboard</a></li>
     </ul>
   </div>
