--- a/public/FrontEnd/partials/map.html
+++ b/public/FrontEnd/partials/map.html
@@ -4,8 +4,8 @@
     <div class="container-fluid">
       <ul class="nav navbar-nav navbar-left" id="maplinks">
         <li><a href="#UploadImages">Upload Images</a></li>
-        <li><a href="#ViewImages">View Uploaded Images</a></li>
-        <li><a href="#imagegallery">Browse Image gallery</a></li>
+        <li class="active"><a href="#ViewImages">View Uploaded Images</a></li>
+        <li><a href="#imagegallery">Browse Image Gallery</a></li>
         <li><a href="#dashboard">Dashboard</a></li>
       </ul>
     </div>
