--- a/public/FrontEnd/partials/imageupload.html
+++ b/public/FrontEnd/partials/imageupload.html
@@ -3,9 +3,9 @@
   <div class="container-fluid">
     <ul class="nav navbar-nav navbar-left" id="maplinks">
       <li></li>
-      <li><a href="#UploadImages">Upload Images</a></li>
+      <li class="active"><a href="#UploadImages">Upload Images</a></li>
       <li><a href="#ViewImages">View Uploaded Images</a></li>
-      <li><a href="#imagegallery">Browse Image gallery</a></li>
+      <li><a href="#imagegallery">Browse Image Gallery</a></li>
       <li><a href="#dashboard">Dashboard</a></li>
     </ul>
   </div>
