--- a/public/FrontEnd/partials/dashboard.html
+++ b/public/FrontEnd/partials/dashboard.html
@@ -1,32 +1,41 @@
 <!-- Upon loggin in the user sees this page first -->
 
-<nav  class="navbar navbar-default navbar-fixed-top" id="mapnavigation">
+<nav class="navbar navbar-inverse">
   <div class="container-fluid">
-    <ul class="nav navbar-nav navbar-left" id="maplinks">
-      <li></li>
-      <li><a href="#UploadImages">Upload Images</a></li>
-      <li><a href="#ViewImages">View Uploaded Images</a></li>
-      <li><a href="#imagegallery">Browse Image Gallery</a></li>
-    </ul>
-  </div>
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">TripAround</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="navbar">
+      <ul class="nav navbar-nav">
+        <li class="active"><a>Dashboard <span class="sr-only">(current)</span></a></li>
+        <li><a href="#UploadImages">Upload Images</a></li>
+        <li><a href="#ViewImages">View Uploaded Images</a></li>
+        <li><a href="#imagegallery">Browse Image Gallery</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
 </nav>
 
-<br>
-<h3 id="dashboard">Welcome {{userid}} </h3>
-<br>
-<div id="info"></div>
-<br>
+<h3 id="dashboard">Welcome, {{userid}}.</h3>
+<div class="row">
+  <div class="col-lg-12">
+    <p id="info"></p>
+  </div>
+</div>
 <!--Display user's last created Maps -->
-<div class="container-fluid" id="menudashboard">
-  <div class="row">
-    <div class="col-sm-4" id="save">
-     <!-- Create a map -->
-      <a class="button" href="" id="savebutt" data-toggle="modal"><i class="fa fa-map fa-3x"></i> Click here to Add New New Maps </a>
-    </div>
-    <div class="col-sm-4" id="view">
-      <!--View Saved Maps -->
-      <a class="button" href="" id="viewbutt" ><i class="fa fa-map fa-3x"></i> Click here to View Saved Maps </a>
-    </div>
+<div class="row">
+  <div class="col-lg-12">
+      <a class="btn btn-primary" href="" id="viewbutt" ><i class="fa fa-map-o fa-lg" aria-hidden="true"></i> View saved maps </a>
+      <a class="btn btn-success" href="" id="savebutt" data-toggle="modal"><i class="fa fa-map-o fa-lg"></i><sup>&nbsp;<i class="fa fa-plus fa-lg"></i></sup>&nbsp;Create new map</a>
   </div>
 </div>
 <!-- User can create a new map -->
@@ -51,26 +60,25 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Create New Map</h4>
+        <h4 class="modal-title">Create a new map</h4>
       </div>
       <div class="modal-body">
         <form id="createform">
           <div id="infofrm"></div>
           <div class="form-group">
-            <label for="mapname">Enter Map Name</label>
-            <input type="text" id="mapname" class="form-control" aria-describedby="maphelp" placeholder="myparistrip">
-            <small id="maphelp" class="form-text text-muted">Enter a name for your map</small>
+            <label for="mapname">Name your map</label>
+            <input type="text" id="mapname" class="form-control" aria-describedby="maphelp" placeholder="Example: Weekend in Paris">
           </div>
           <div class="form-group">
-            <label for="descriptiontext">Enter some description</label>
-            <input id="descriptiontext" type="text-area" class="form-control" rows="3" placeholder="Enter some optional description">
+            <label for="descriptiontext">Describe your trip</label>
+            <textarea class="form-control" id="descriptiontext" rows="3" placeholder="Example: My friends and I went to Paris for a weekend. We had so much fun!"></textarea>
           </div>
 
         </form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" id="submit">Submit Now</button>
+        <button type="button" class="btn btn-success" id="submit">Submit</button>
       </div>
     </div>
   </div>
@@ -89,25 +97,25 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Create New Map</h4>
+        <h4 class="modal-title">Edit the map</h4>
       </div>
       <div class="modal-body">
         <form id="EditDescription">
-          <div id="infodescrip"></div>
           <div class="form-group">
-            <label for="description">Enter Suitable description</label>
-            <input type="text" id="description" class="form-control" placeholder="Enter another description">
+            <label for="description">Enter a description</label>
+            <textarea class="form-control" id="description" rows="3"></textarea>
           </div>
         </form>
+        <div id="infodescrip"></div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" id="descriptionsub">Submit Now</button>
+        <button type="button" class="btn btn-primary" id="descriptionsub">Submit</button>
       </div>
     </div>
   </div>
 </div>
 
-<div id="confirmdeletion" title="Delete the Map">
-  <p><span class="ui-icon ui-icon-alert" style="float:left; margin:12px 12px 20px 0;"></span>This map will be permanently deleted and cannot be recovered. Are you sure?</p>
+<div id="confirmdeletion" title="Delete the map">
+  <div class="alert alert-danger" role="alert"><i class="fa fa-exclamation-triangle fa-3x pull-left" aria-hidden="true"></i> This map will be permanently deleted and cannot be recovered. Are you sure?</div>
 </div>
