--- a/public/FrontEnd/partials/map.html
+++ b/public/FrontEnd/partials/map.html
@@ -1,12 +1,12 @@
 <!-- Description : User can drag drop images to images -->
 
-<nav  class="navbar navbar-default navbar-fixed-top" id="mapnavigation">
+<nav  class="navbar navbar-inverse" id="mapnavigation">
     <div class="container-fluid">
       <ul class="nav navbar-nav navbar-left" id="maplinks">
+        <li><a href="#dashboard">Dashboard</a></li>
         <li><a href="#UploadImages">Upload Images</a></li>
         <li class="active"><a href="#ViewImages">View Uploaded Images</a></li>
         <li><a href="#imagegallery">Browse Image Gallery</a></li>
-        <li><a href="#dashboard">Dashboard</a></li>
       </ul>
     </div>
   </nav>
