--- a/public/FrontEnd/partials/imageupload.html
+++ b/public/FrontEnd/partials/imageupload.html
@@ -1,71 +1,81 @@
 <!--Image Upload -->
-<nav  class="navbar navbar-inverse" id="mapnavigation">
+<nav class="navbar navbar-inverse">
   <div class="container-fluid">
-    <ul class="nav navbar-nav navbar-left" id="maplinks">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">TripAround</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="navbar">
+      <ul class="nav navbar-nav">
       <li><a href="#dashboard">Dashboard</a></li>
       <li class="active"><a href="#UploadImages">Upload Images</a></li>
       <li><a href="#ViewImages">View Uploaded Images</a></li>
       <li><a href="#imagegallery">Browse Image Gallery</a></li>
-    </ul>
-  </div>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
 </nav>
-<br>
-<h3 id="dashboard">Welcome {{userid}} </h3>
-<br>
-<br>
-<h5><div id="maptext"> You are uploading images to : {{map}}</div></h5>
+
+<h1 id="dashboard">Welcome, {{userid}}.</h1>
+
+<div class="row">
+  <div class="col-sm-12">
+    <form id="mapform">
+      <p id="maptext">You are uploading images to: <em>{{map}}</em>. <input type="submit" value="Save map" id="savemap" class="btn btn-success btn-sm"></p>
+    </form>
+  </div>
+</div>
 
 <div class="imageupload">
-  <div class="container-fluid">
   <div class="imageuploadform">
-    <div class="container-fluid">
-      <div class="row">
+    <div class="row">
+      <div class="col-lg-12">
         <form id="uploadForm2" enctype="multipart/form-data">
-             <div id="uploadstatus"></div>
-             <div class="col-sm-6">
-               <p> <input type="file" name="userPhoto" multiple id="userphoto" /> </p>
-             </div>
+          <p id="uploadstatus"></p>
+          <div class="col-sm-6">
+            <input type="file" name="userPhoto" multiple id="userphoto" />
+          </div>
           <!--
-             <div class="col-sm-6">
-               <p> <input type="submit" value="Upload Image" name="submit" id="submitbutton"></p>
-             </div> -->
-             <div id="dropzonePreview" class="dropzone">
-               <div class="dz-default dz-message"> <small class="text-muted">Drag Drop Pictures here </small></div>
-             </div>
-          <span id = "status"></span>
+          <div class="col-sm-6">
+            <p> <input type="submit" value="Upload Image" name="submit" id="submitbutton"></p>
+          </div> -->
+          <div id="dropzonePreview" class="dropzone">
+            <div class="dz-default dz-message"><small class="text-muted">Drop pictures here</small></div>
+          </div>
+          <span id="status"></span>
         </form>
       </div>
-     </div>
+    </div>
   </div>
   <!--finish of uploading forms-->
-    <form id="mapform">
-      <input type="submit" value="Save Map" id="savemap">
-    </form>
 
   <!--Start of Drag and drop form -->
   <!--
   <div id="dragdrop">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-lg-12">
-          <form id="uploadForm" action="/dragdrop">
-            <div id="someid" class="dropzone"></div>
-            <input type="submit" value="Upload Image" name="submit" id="dragdropbutton"></p>
-          </form>
-        </div>
+    <div class="row">
+      <div class="col-lg-12">
+        <form id="uploadForm" action="/dragdrop">
+          <div id="someid" class="dropzone"></div>
+          <input type="submit" value="Upload Image" name="submit" id="dragdropbutton"></p>
+        </form>
       </div>
     </div>
   </div> -->
 
   <!--Start of Google Maps -->
   <div id="googlemapcontainer">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-lg-12">
-          <div id="googleMap"style="height:380px;"></div>
-        </div>
+    <div class="row">
+      <div class="col-lg-12">
+        <div id="googleMap"style="height:380px;"></div>
       </div>
     </div>
-  </div>
   </div>
 </div>
