Changed look of Image Gallery

--- a/public/FrontEnd/partials/imageupload.html
+++ b/public/FrontEnd/partials/imageupload.html
@@ -16,7 +16,7 @@
     <div class="collapse navbar-collapse" id="navbar">
       <ul class="nav navbar-nav">
       <li><a href="#dashboard">Dashboard</a></li>
-      <li class="active"><a href="#UploadImages">Upload Images</a></li>
+      <li class="active"><a href="#UploadImages">Upload Images <span class="sr-only">(current)</span></a></li>
       <li><a href="#ViewImages">View Uploaded Images</a></li>
       <li><a href="#imagegallery">Browse Image Gallery</a></li>
       </ul>
