--- a/public/FrontEnd/partials/imagegallery.html
+++ b/public/FrontEnd/partials/imagegallery.html
@@ -1,25 +1,50 @@
-<!-- Image gallery view
-Uses pluginmagnific
--->
-
-<nav  class="navbar navbar-inverse" id="mapnavigation">
+<!-- Image gallery view. Uses pluginmagnific. -->
+<nav class="navbar navbar-inverse">
   <div class="container-fluid">
-    <ul class="nav navbar-nav navbar-left" id="maplinks">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">TripAround</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="navbar">
+      <ul class="nav navbar-nav">
       <li><a href="#dashboard">Dashboard</a></li>
       <li><a href="#UploadImages">Upload Images</a></li>
       <li><a href="#ViewImages">View Uploaded Images</a></li>
-      <li class="active"><a href="#imagegallery">Browse Image Gallery</a></li>
-    </ul>
-  </div>
+      <li class="active"><a href="#imagegallery">Browse Image Gallery <span class="sr-only">(current)</span></a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
 </nav>
-<br>
-<h3 id="dashboard">Welcome {{userid}} </h3>
-<br>
-<br>
-<div id="mapinfo">You are viewing images of  {{map}} </div>
-<br>
 
-<br>
+<h1 id="dashboard">Welcome, {{userid}}.</h1>
+
+<div class="row">
+  <div class="col-sm-12">
+    <form id="mapform">
+      <p id="maptext">You are viewing the images of: <em>{{map}}</em>.</p>
+    </form>
+  </div>
+</div>
+
+<div class="row" id="imagegall">
+</div>
+
+<div class="row">
+  <div class="col-lg-12">
+    <button class="btn btn-primary btn-lg" id="filters">Apply filters</button>
+  </div>
+</div>
+
+<!-- old gallery implementations
+
 <div class="container fluid" id="gallerycontainer">
   <div class="row">
     <div class="col-lg-12">
@@ -34,6 +59,7 @@ Uses pluginmagnific
     <ul class="pager"></ul>
   </div>
 </div>
+-->
 
 <!-- Filter Modal For Face Detection-->
 
@@ -43,15 +69,15 @@ Uses pluginmagnific
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Tagged Image</h4>
+        <h4 class="modal-title">Filter images</h4>
       </div>
       <div class="modal-body">
         <form id="filterform">
           <div class="checkbox">
-            <label><input type="checkbox" id="smilecheck" value="">Check for Smiles</label>
+            <label><input type="checkbox" id="smilecheck" value=""> Check for smiles</label>
           </div>
           <div class="checkbox">
-            <label><input type="checkbox" id="facecheck" value="">Check for face</label>
+            <label><input type="checkbox" id="facecheck" value="" disabled> Check for face</label>
           </div>
         </form>
       </div>
@@ -61,4 +87,3 @@ Uses pluginmagnific
     </div>
   </div>
 </div>
-<button id="filters">Apply filters</button>
