--- a/public/FrontEnd/partials/map.html
+++ b/public/FrontEnd/partials/map.html
@@ -45,7 +45,9 @@
           <h4 class="modal-title">Tagged Image</h4>
         </div>
         <div class="modal-body">
-         <div id="image-container"></div>
+         <div id="image-container">
+           <img src="" id="image">
+         </div>
           <form id="imagedescription">
             <input type="text" placeholder=" Enter Description" id="imageinfo">
           </form>
