User trail fix.

--- a/public/FrontEnd/partials/map.html
+++ b/public/FrontEnd/partials/map.html
@@ -82,14 +82,15 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Select Option</h4>
+        <h4 class="modal-title">Select Trail Options and Edit Descriptions</h4>
       </div>
       <div class="modal-body">
         <div id="infotxt"></div>
-        <input type="text" id="traildescription" placeholder="Enter a description">
         <br>
         <button class="btn btn-primary" id="airplane">Airplane</button>
         <button class="btn btn-primary" id="bus">Bus</button>
+        <button class="btn btn-primary" id="train">Train</button>
+        <button class="btn btn-primary" id="editdes">Edit Description</button>
         <button class="btn btn-primary" id="trailsub">Submit Now</button>
       </div>
       <div class="modal-footer" id="optionsfooter">
