--- a/public/FrontEnd/partials/dashboard.html
+++ b/public/FrontEnd/partials/dashboard.html
@@ -25,6 +25,20 @@
 </nav>
 
 <h1 id="dashboard">Welcome, {{userid}}.</h1>
+<div class="row steps">
+  <div class="col-md-3 step step-current">
+    <a>1. Create or choose a map.</a>
+  </div>
+  <div class="col-md-3 step step-future">
+    <a>2. Upload pictures.</a>
+  </div>
+  <div class="col-md-3 step step-future">
+    <a>3. Manage your gallery.</a>
+  </div>
+  <div class="col-md-3 step step-future">
+    <a>4. Edit your map.</a>
+  </div>
+</div>
 <div class="row">
   <div class="col-lg-12">
     <p id="info"></p>
