--- a/public/FrontEnd/partials/map.html
+++ b/public/FrontEnd/partials/map.html
@@ -45,6 +45,7 @@
           <h4 class="modal-title">Tagged Image</h4>
         </div>
         <div class="modal-body">
+          <div id="image-des"></div>
          <div id="image-container">
            <img src="" id="image">
          </div>
